--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,17 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
-.vscode/
-npm-debug.log*
-
 .idea/
-.ionic/
-.sourcemaps/
-.sass-cache/
-.tmp/
-.versions/
-coverage/
-dist/
 node_modules/
-tmp/
-temp/
-platforms/
-plugins/
-www/
-$RECYCLE.BIN/
-
+bin/
 .DS_Store
-Thumbs.db
-UserInterfaceState.xcuserstate
+dist/
+package.json
+package-lock.json
+pom.xml
+target/
+.metadata
+.recommenders
+.settings
+.classpath
+.project
