--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,3 @@
-# Specifies intentionally untracked files to ignore when using Git
-# http://git-scm.com/docs/gitignore
 
-.idea/
-node_modules/
-bin/
-.DS_Store
-dist/
-package.json
-package-lock.json
-pom.xml
-target/
-.metadata
-.recommenders
-.settings
-.classpath
-.project
+node_modules
+
