--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.1.4",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "request": "^2.88.0"
   }
 }
