bcrypt module removed

--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.1.4",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "request": "^2.88.0"
   }
 }
