--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "devServer": "webpack-dev-server --mode development",
-    "build": "webpack --mode development"
+    "build": "webpack --mode development",
+    "dev": "nodemon --watch src server.js"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,8 @@
     "react-dom": "^16.3.0",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-server": "^3.1.1",
+    "nodemon": "^1.18.4"
   },
   "dependencies": {
     "axios": "^0.18.0",
