--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^5.1.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "save": "^2.3.2"
   }
 }
